# nixos-search

./: .gitignore  COPYING  README.md  default.nix  elm-srcs.nix  elm.json  flake.nix  overlay.nix  package.json  treefmt.nix  version.nix  webpack.config.js
.github/: dependabot.yml  failing-import-issue.md
.github/workflows/: .frontend.yml.swp  benchmark-comment.yml  benchmark.yml  build-flake-info.yml  check-flake-files.yml  check-formatting.yml  cron-flake-update-matrix.yml  cron-flakes.yml  cron-nixpkgs.yml  cron.yml  frontend.yml  import-flakes.yml  import-nixpkgs.yml  import-to-elasticsearch.yml  main.yml  manage-elasticsearch.yml  prune-elasticsearch.yml  pulls.yml  switch-logo.yml  test.yml  update-available-channels.yml  update-flake-lock.yml  update-flakes.yml  update-matrix.yml  update-repology-counts.yml
flake-info/: Cargo.toml  README.md  default.nix
flake-info/.cargo/: config.toml
flake-info/assets/commands/: flake_info.nix
flake-info/assets/commands/test/: default.nix
flake-info/assets/commands/test/basic-flake/: flake.nix
flake-info/assets/commands/test/expected-outputs/: agenix.json  basic-flake.json  deploy-rs.json  hydra.json
flake-info/assets/data/: fix-xrefs.lua
flake-info/examples/: .-..json  adaspark-offen.json  examples.in.json  examples.txt  github:W95Psp-LiterateFStar.json  github:ngi-nix-openpgp-ca.json  github:serokell-deploy-rs.json  pull.sh
flake-info/src/: elastic.rs  lib.rs
flake-info/src/commands/: dep_count.rs  flake_info.nix  mod.rs  nix_check_version.rs  nix_flake_attrs.rs  nix_flake_info.rs  nix_gc.rs  nixpkgs_info.rs  packages-config.nix  repology.rs
flake-info/src/data/: derivation.rs  export.rs  fix-xrefs.lua  flake.rs  import.rs  link-manpages.nix  mod.rs  pandoc.rs  prettyprint.rs  source.rs  system.rs  utility.rs
flake-repos/: Cargo.toml  default.nix  repos.toml
flake-repos/src/: main.rs
flakes/: 01.json  flake-registry.json  flake.nix  github-atom.toml  github-ntoz.toml  github.toml  manual.toml  ngi-nix.toml  nix-community.toml  nixos.toml  other.toml  tweag.toml
flakes/manual/: ngi-nix.toml  nix-community.toml  nixos.toml  uncategorized.toml
frontend/: default.nix  elm-srcs.nix  elm.json  netlify.toml  package-lock.json  package.json  robots.txt  rsbuild.config.js  rsbuild.config.mjs  sitemap.xml  webpack.config.js
frontend-astro/: astro.config.ts  default.nix  package-lock.json  package.json  tsconfig.json
frontend-astro/src/: styling.css
frontend/benchmark/: queries.json  run.mjs
frontend/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/public/: _redirects  desc-search-packages.xml
frontend/review/: elm.json
frontend/scripts/: build-autocomplete-corpus.mjs  serve-local.mjs
frontend/src/: Benchmark.elm  Channels.elm  Main.elm  Ports.elm  Route.elm  Search.elm  Style.elm  Utils.elm  index.html  (+5 more)
import-scripts/: default.nix  pyproject.toml
import-scripts/import_scripts/: channel.py  nix.py  packages-config.nix
import-scripts/tests/: test_channel.py  test_nix.py
scripts/: import-channel  import-channels-into-elasticsearch  packages-config.nix
src/: ElasticSearch.elm  Main.elm  Route.elm  Search.elm  Utils.elm  index.html  index.js  index.less  index.scss  styles.scss
(+51 files in other folders)
