[package]
name = "flake-repos"
version = "0.1.0"
authors = ["sophrosyne97 <joshuaortiz@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.9"
serde = "1.0.129"
serde_yaml = "0.8"
tokio = { version = "1.10.1", features = ["full"] }
toml = "0.5"
structopt = "0.3.22"
