[package]
name = "flake-repos"
version = "0.1.0"
authors = ["sophrosyne97 <joshuaortiz@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.8"
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["full"] }
toml = "0.5"
url = "2.2.2"